# Miyabi

./: .dockerignore  .env.example  .env.test  .eslintignore  .eslintrc.json  .gitignore  .gitleaksignore  .gitmodules  .miyabi.yml  .miyabi.yml.example  .npmignore  .npmrc  @memory-bank.mdc  AGENTIC_OS.md  AGENTIC_OS_INTEGRATION_COMPLETE.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  COMMUNITY_GUIDELINES.md  COMPLIANCE_LEGAL_REVIEW.md  CONTRIBUTING.md  Cargo.toml  DISCORD_COMMUNITY_PLAN.md  DISCORD_MCP_SETUP.md  DISCORD_SETUP_QUICKSTART.md  Dockerfile  E2E_DEMO_GUIDE.md  FINAL_COMPLETION_REPORT_JP.md  GETTING_STARTED.md  LICENSE  MARKETPLACE.md  NOTICE  OSS_DEVELOPMENT_SYSTEM.md  PHASE3_COMPLETE.md  PRIVACY.md  PRODUCT_TEMPLATE_PLAN.md  PROJECT_SUMMARY.md  QUICKSTART.md  README-PLUGIN.md  (+17 more)
.ai/: BACKLOG_VISUALIZATION_TEST_REPORT.md  DASHBOARD_IMPROVEMENTS_SUMMARY.md  MIYABI_CONFIG_REGRESSION_TEST_REPORT.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PHASE1_BENCHMARK_RESULTS.md  SPRINT2_FINAL_REPORT.md  SPRINT3_UI_UX_IMPROVEMENTS.md  UI_IMPROVEMENT_SPRINT_FINAL_REPORT.md  agent_specification.yaml  arch.md  capture-dashboard.mjs  complete-workflow-demo.mjs  coordinator-summary-issue-5.md  deep-inspect.mjs  demo-with-capture.mjs  demo-workflow.sh  execution-dag-issue-5.md  execution-plan-issue-5.json  execution-plan-issue-5.yml  final-check.mjs  full-demo-check.mjs  implementation_example.yaml  inspect-agent-detail.mjs  inspect-progress.mjs  issue-41-implementation-plan.md  phase-a-subtasks.json  prd.md  requirements.txt  test-event-validation.mjs  test-layout-calculation.mjs  test-real-workflow.mjs  test-sprint2-features.mjs  test-webhook-integration.mjs  verify-fixes.mjs  verify-ui-detailed.mjs  verify-ui-simple.mjs  zoom-check.mjs
.claude/: QUICK_START.md  README.md  TROUBLESHOOTING.md  instructions.md  mcp-config.json  mcp.json
.claude-plugin/: DISTRIBUTION_GUIDE.md  MARKETPLACE_README.md  README.md  TEST_REPORT.md  commands.json  context.md  ignore.txt  instructions.md  marketplace.json  plugin.json  project.json  verify-plugin.sh
.github/: AGENTS.md  GUARDIAN.md  WORKFLOW_RULES.md  dependabot.yml  labels-ja.yml  labels.yml
.todos_shunsuke/: todos.md
agents/: IMPLEMENTATION_REPORT.md  INTELLIGENT_AGENT_SYSTEM.md  NEXT_PHASE_PROPOSAL.md  agent-registry.ts  base-agent.d.ts  base-agent.d.ts.map  base-agent.js  base-agent.js.map  base-agent.ts  codegen-agent.md  dynamic-agent.ts  dynamic-tool-creator.ts  (+2 more)
crates/miyabi-agents/: Cargo.toml
crates/miyabi-agents/src/: coordinator.rs  execution.rs  lib.rs  registry.rs
crates/miyabi-cli/: Cargo.toml
crates/miyabi-cli/src/: main.rs
crates/miyabi-core/: Cargo.toml
crates/miyabi-core/src/: config.rs  filesystem.rs  lib.rs  logging.rs
crates/miyabi-types/: Cargo.toml
crates/miyabi-types/src/: lib.rs
(+848 files in other folders)
