[package]
name = "miyabi-agents"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Built-in autonomous agents for Miyabi"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
miyabi-types = { path = "../miyabi-types" }
miyabi-core = { path = "../miyabi-core" }
serde.workspace = true
