[package]
name = "miyabi-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command line interface for Miyabi autonomous development framework (Rust edition)"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

miyabi-core = { path = "../miyabi-core" }
miyabi-types = { path = "../miyabi-types" }
miyabi-agents = { path = "../miyabi-agents" }
