[package]
name = "miyabi-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core utilities for Miyabi autonomous development framework"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true
hostname.workspace = true
miyabi-types = { path = "../miyabi-types" }
