[package]
name = "miyabi-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared data structures for the Miyabi autonomous development framework"

[dependencies]
chrono.workspace = true
serde.workspace = true
uuid.workspace = true
serde_json.workspace = true
